# fiuba-taller-1C24

TP/: Login.toml  README.md  run.sh
TP Individual 1C23/: README.md
TP Individual 1C23/ajedrez/src/: chess.rs  main.rs  utils.rs
TP Individual 1C23/ajedrez/tests/: integration_test.rs
TP Individual 1C24/grep/: test.txt
TP/project/: Cargo.toml
TP/project/camera-system/: Cargo.toml  config.json  config_demo.json
TP/project/camera-system/src/: camera.rs  camera_system.rs  client.rs  config.rs  lib.rs  main.rs
TP/project/common/src/: camera_status.rs  coordenate.rs  drone_status.rs  error.rs  incident.rs  lib.rs  position.rs
TP/project/drone/: Cargo.toml
TP/project/drone/config/: config_1.json  config_10.json  config_11.json  config_2.json  config_3.json  config_4.json  config_5.json  config_6.json  config_7.json  config_8.json  config_9.json
TP/project/drone/src/: client.rs  config.rs  drone.rs  lib.rs  main.rs  utils.rs
TP/project/incident-recognition/: Cargo.toml
TP/project/incident-recognition/src/: aws_rekognition.rs
TP/project/monitor/: Cargo.toml  config.json  config_demo.json
TP/project/monitor/src/: camera.rs  channels_tasks.rs  client.rs  config.rs  drone.rs  (+5 more)
TP/project/mqtt/: Cargo.toml
TP/project/server/: Cargo.toml  Login.toml  Settings.toml
TP/project/tests-integration/: Cargo.toml
TP/project/tests-integration/tests/: integration_tests.rs
TP/project/thread-pool/: Cargo.toml
guia_1/ejercicio_1/: Cargo.toml  palabras.txt
guia_1/ejercicio_1/src/: main.rs
guia_1/ejercicio_2/: Cargo.toml
guia_1/ejercicio_3/: Cargo.toml
(+43 files in other folders)
