[package]
name = "camera-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt = { path = "../mqtt"} 
common = { path = "../common"}
thread-pool = { path = "../thread-pool"}
incident-recognition = { path = "../incident-recognition"}
aws-config = "1.5.4"
aws-sdk-rekognition = "1.37.0"
aws-sdk-s3 = { version = "1.40.0", features = ["rt-tokio"]}
aws-types = "1.3.3"
tokio = {version="1.38.0", features = ["full"]}
