[package]
name = "tests-integration"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "integration_tests"

[dependencies]
monitor = { path = "../monitor" }
common = { path = "../common" }
drone = { path = "../drone" }
mqtt = { path = "../mqtt" }
camera-system = { path = "../camera-system" }